tests/rosetta/transpiler/C/algebraic-data-types.c
// Generated by Mochi 0.10.32 on 2025-07-25 19:53 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    if(v==0) return strdup("false");
    if(v==1) return strdup("true");
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

typedef struct Anon1 Anon1;

struct Anon1 {
    const char* cl;
    int le;
    int aa;
    int ri;
};

int i = 1;

Anon1 node(const char* cl, int le, int aa, int ri) {
    return (Anon1){.cl = cl, .le = le, .aa = aa, .ri = ri};
}

const char* treeString(int t) {
    if () {
        return "E";
    }
    int m = t;
    return str_concat(str_concat(str_concat(str_concat(str_concat(str_concat(str_concat(str_concat("T(", m["cl"]), ", "), treeString(m["le"])), ", "), str_int(m["aa"])), ", "), treeString(m["ri"])), ")");
}

int balance(int t) {
    if () {
        return t;
    }
    int m = t;
    if (strcmp(m["cl"], "B") != 0) {
        return t;
    }
    int le = m["le"];
    int ri = m["ri"];
    if () {
        int leMap = le;
        if (strcmp(leMap["cl"], "R") == 0) {
            int lele = leMap["le"];
            if () {
                int leleMap = lele;
                if (strcmp(leleMap["cl"], "R") == 0) {
                    return node("R", node("B", leleMap["le"], leleMap["aa"], leleMap["ri"]), leMap["aa"], node("B", leMap["ri"], m["aa"], ri));
                }
            }
            int leri = leMap["ri"];
            if () {
                int leriMap = leri;
                if (strcmp(leriMap["cl"], "R") == 0) {
                    return node("R", node("B", leMap["le"], leMap["aa"], leriMap["le"]), leriMap["aa"], node("B", leriMap["ri"], m["aa"], ri));
                }
            }
        }
    }
    if () {
        int riMap = ri;
        if (strcmp(riMap["cl"], "R") == 0) {
            int rile = riMap["le"];
            if () {
                int rileMap = rile;
                if (strcmp(rileMap["cl"], "R") == 0) {
                    return node("R", node("B", m["le"], m["aa"], rileMap["le"]), rileMap["aa"], node("B", rileMap["ri"], riMap["aa"], riMap["ri"]));
                }
            }
            int riri = riMap["ri"];
            if () {
                int ririMap = riri;
                if (strcmp(ririMap["cl"], "R") == 0) {
                    return node("R", node("B", m["le"], m["aa"], riMap["le"]), riMap["aa"], node("B", ririMap["le"], ririMap["aa"], ririMap["ri"]));
                }
            }
        }
    }
    return t;
}

int ins(int tr, int x) {
    if () {
        return 0;
    }
    if (x < tr["aa"]) {
        return balance(node(tr["cl"], ins(tr["le"], x), tr["aa"], tr["ri"]));
    }
    if (x > tr["aa"]) {
        return balance(node(tr["cl"], tr["le"], tr["aa"], ins(tr["ri"], x)));
    }
    return tr;
}

Anon1 insert(int tr, int x) {
    int t = ins(tr, x);
    if () {
        return 0;
    }
    int m = t;
    return node("B", m["le"], m["aa"], m["ri"]);
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        int tr = 0;
        while (i <= 16) {
            tr = insert(tr, i);
            i = i + 1;
        }
        puts(treeString(tr));
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
